--- a/index.html
+++ b/index.html
@@ -14,603 +14,7 @@
     <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
 
     <!-- CSS -->
-    <style>
-        /* 
-        ====== Google Font ======
-        */
-        @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
-        @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
-
-
-
-        /* 
-        ====== Loading Screen ======
-        */
-        #loading {
-            position: fixed;
-            display: block;
-            width: 100%;
-            height: 100%;
-            text-align: center;
-            background: linear-gradient(rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.2));
-            z-index: 100;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-        }
-
-        #loading-image {
-            width: 50px;
-            margin: 0 auto;
-        }
-
-
-        /* 
-        ====== Animation ======
-        */
-        .js-scroll {
-            opacity: 0;
-            transition: opacity 500ms;
-        }
-
-        .js-scroll.scrolled {
-            opacity: 1;
-        }
-
-        .scrolled.fade-in-bottom {
-            animation: fade-in-bottom 1000ms ease-in-out both;
-        }
-
-        .scrolled.slide-left {
-            animation: slide-in-left 1500ms ease-in-out both;
-        }
-
-        .scrolled.slide-right {
-            animation: slide-in-right 1500ms ease-in-out both;
-        }
-
-        @keyframes slide-in-left {
-            0% {
-                -webkit-transform: translateX(-100px);
-                transform: translateX(-100px);
-                opacity: 0;
-            }
-
-            100% {
-                -webkit-transform: translateX(0);
-                transform: translateX(0);
-                opacity: 1;
-            }
-        }
-
-        @keyframes slide-in-right {
-            0% {
-                -webkit-transform: translateX(100px);
-                transform: translateX(100px);
-                opacity: 0;
-            }
-
-            100% {
-                -webkit-transform: translateX(0);
-                transform: translateX(0);
-                opacity: 1;
-            }
-        }
-
-        @keyframes fade-in-bottom {
-            0% {
-                -webkit-transform: translateY(50px);
-                transform: translateY(50px);
-                opacity: 0;
-            }
-
-            100% {
-                -webkit-transform: translateY(0);
-                transform: translateY(0);
-                opacity: 1;
-            }
-        }
-
-        @keyframes fade-in {
-            0% {
-                opacity: 0;
-            }
-
-            100% {
-                opacity: 1;
-            }
-        }
-
-
-
-        /* 
-        ====== Body & Container ======
-        */
-        * {
-            margin: 0 0;
-            padding: 0 0;
-        }
-
-        html,
-        body {
-            overflow-x: hidden;
-            scroll-behavior: smooth;
-        }
-
-        .header-text {
-            margin: 0 0 14px;
-            font-size: 26px;
-            color: rgb(128, 167, 240);
-            font-family: 'Open Sans';
-        }
-
-        @media (max-width: 768px) {
-            .header-text {
-                font-size: 24px;
-            }
-        }
-
-        @media (max-width: 480px) {
-            .header-text {
-                font-size: 22px;
-            }
-        }
-
-
-
-        /* 
-        === Waves ===
-        */
-        .header-waves {
-            margin: -250px 0 10px;
-            transform: scaleX(-1);
-        }
-
-        .footer-waves {
-            transform: scaleX(-1);
-        }
-
-
-
-        /* 
-        ====== Navigation ======
-        */
-        nav {
-            padding: 10px 5%;
-            position: fixed;
-            top: 0;
-            z-index: 2;
-            width: 100%;
-            height: 5%;
-            display: flex;
-
-            background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7));
-            border-bottom: 1px solid black;
-            font-size: 24px;
-            opacity: 0;
-            transition: 800ms;
-        }
-
-        .nav--alt {
-            opacity: 100%;
-        }
-
-        .nav-text {
-            margin: 0 20px;
-            height: 100%;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-        }
-
-        nav a {
-            color: white;
-            text-shadow: 1px 2px black;
-            text-decoration: none;
-            font-family: 'Poppins';
-        }
-
-        .nav-logo {
-            height: 100%;
-        }
-
-        @media (max-width: 480px) {
-            nav {
-                font-size: 20px;
-            }
-
-            .nav-text {
-                margin: 0 12px;
-            }
-        }
-
-
-        /* 
-        ====== Header Section ======
-        */
-        #header {
-            padding: 200px 0;
-            box-sizing: border-box;
-            background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('images/kano-new-edited.jpg') no-repeat;
-            background-size: cover;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            text-align: center;
-        }
-
-        #header h1 {
-            font-size: 68px;
-            font-variant: small-caps;
-            /* color: white; */
-            color: goldenrod;
-            font-weight: 100;
-            letter-spacing: 2px;
-            word-spacing: 8px;
-            text-shadow: 1px 2px black;
-        }
-
-        #header p {
-            margin: 10px 0;
-            font-family: 'Poppins';
-            font-size: 16px;
-            color: rgb(170, 170, 170);
-        }
-
-        .video {
-            cursor: pointer;
-            position: relative;
-            z-index: 1;
-            margin: 0 auto;
-            width: max-content;
-            height: max-content;
-            opacity: 70% !important;
-        }
-
-        .video img {
-            width: 60px;
-            height: 60px;
-            animation: video-btn 500ms alternate-reverse infinite;
-        }
-
-        .video img:hover {
-            opacity: 50%;
-        }
-
-        @keyframes video-btn {
-            0% {
-                transform: scale(1);
-            }
-
-            100% {
-                transform: scale(1.1);
-            }
-        }
-
-        @media (max-width: 768px) {
-            #header {
-                padding: 180px 0;
-                background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('images/kano-new-edited-c.jpg');
-            }
-
-            #header h1 {
-                font-size: 52px;
-                letter-spacing: 1px;
-            }
-
-            #header p {
-                font-size: 15px;
-            }
-        }
-
-        @media (max-width: 480px) {
-            #header {
-                padding: 150px 10px 100px;
-            }
-
-            #header h1 {
-                font-size: 36px;
-                text-shadow: 1px 1px black;
-            }
-
-            #header p {
-                font-size: 13px;
-            }
-
-            .video img {
-                width: 50px;
-                height: 50px;
-            }
-        }
-
-
-
-        /* 
-        ====== About Section ======
-        */
-        #about,
-        #attract,
-        #facility,
-        #gallery,
-        #location {
-            padding: 120px 100px 0;
-            box-sizing: border-box;
-            width: 100%;
-            height: max-content;
-        }
-
-        #about {
-            padding: 30px 100px 0;
-        }
-
-        #about p,
-        #attract p,
-        #facility p {
-            font-family: 'Poppins';
-            font-size: 18px;
-            color: rgb(80, 80, 80);
-        }
-
-        @media (max-width: 768px) {
-
-            #attract,
-            #facility,
-            #gallery,
-            #location {
-                padding: 90px 50px 0;
-            }
-
-            #about {
-                padding: 20px 50px 0;
-            }
-
-            #about p,
-            #attract p,
-            #facility p {
-                font-size: 17px;
-            }
-        }
-
-        @media (max-width: 480px) {
-
-            #attract,
-            #facility,
-            #gallery,
-            #location {
-                padding: 70px 25px 0;
-            }
-
-            #about {
-                padding: 20px 25px 0;
-            }
-
-            #about p,
-            #attract p,
-            #facility p {
-                font-size: 15px;
-            }
-        }
-
-
-
-        /* 
-        ====== Attract Section ======
-        */
-        .cards-list {
-            margin: 30px 0 0;
-            display: flex;
-            justify-content: space-around;
-            flex-wrap: wrap;
-        }
-
-        .card {
-            margin: 8px auto;
-            width: 260px;
-            height: 220px;
-            border-radius: 6px;
-            box-shadow: 3px 4px 10px rgb(0, 0, 0, 0.50);
-            transition: 500ms;
-        }
-
-        .card .card_image {
-            width: inherit;
-            height: inherit;
-            border-radius: 6px;
-        }
-
-        .card .card_image img {
-            width: inherit;
-            height: inherit;
-            border-radius: 6px;
-            object-fit: cover;
-        }
-
-        #attract .card .card_title p {
-            text-align: center;
-            font-family: 'Poppins';
-            font-size: 14px;
-            margin-top: -50px;
-            height: 40px;
-            color: rgb(190, 190, 190);
-        }
-
-
-
-        /* 
-        ====== Facility Section ======
-        */
-        #facility ul {
-            list-style: circle inside;
-        }
-
-        #facility ul li {
-            margin: 10px 30px;
-            font-size: 18px;
-            font-family: 'Poppins';
-            color: rgb(80, 80, 80);
-        }
-
-        @media (max-width: 768px) {
-            #facility ul li {
-                font-size: 17px;
-            }
-        }
-
-        @media (max-width: 480px) {
-            #facility ul {
-                margin: 10px 0;
-            }
-
-            #facility ul li {
-                font-size: 15px;
-            }
-        }
-
-
-
-        /* 
-        ====== Gallery Section ======
-        */
-        .gallery-image {
-            font-family: 'Poppins';
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-        }
-
-        .gallery-image img {
-            width: inherit;
-            height: inherit;
-            transform: scale(1.0);
-            transition: transform 0.5s ease;
-        }
-
-        .img-box {
-            box-sizing: content-box;
-            margin: 10px;
-            height: 250px;
-            width: 350px;
-            overflow: hidden;
-            display: inline-block;
-            color: white;
-            position: relative;
-            background-color: white;
-            box-shadow: 2px 3px 6px rgb(53, 53, 53);
-        }
-
-        .caption {
-            position: absolute;
-            bottom: 5px;
-            left: 20px;
-            opacity: 0.0;
-            transition: transform 0.4s ease, opacity 0.4s ease;
-        }
-
-        .transparent-box {
-            height: 250px;
-            width: 350px;
-            background-color: rgba(0, 0, 0, 0);
-            position: absolute;
-            top: 0;
-            left: 0;
-            transition: background-color 0.4s ease;
-        }
-
-        .img-box:hover img {
-            transform: scale(1.1);
-        }
-
-        .img-box:hover .transparent-box {
-            background-color: rgba(0, 0, 0, 0.5);
-        }
-
-        .img-box:hover .caption {
-            transform: translateY(-20px);
-            opacity: 1.0;
-        }
-
-        .img-box:hover {
-            cursor: pointer;
-        }
-
-        .caption>p:nth-child(2) {
-            font-size: 0.8em;
-        }
-
-        .opacity-low {
-            opacity: 0.5;
-        }
-
-
-
-        /* 
-        ====== Location Section ======
-        */
-        #location {
-            text-align: center;
-        }
-
-        #location p {
-            font-family: 'Open Sans';
-            color: rgb(90, 90, 90);
-        }
-
-        .mapouter {
-            margin: 10px auto 0;
-            position: relative;
-            text-align: right;
-            height: 100%;
-            width: 100%;
-        }
-
-        .gmap_canvas {
-            margin: 0 auto;
-            overflow: hidden;
-            background: none !important;
-            height: 300px;
-            width: 70%;
-            /* border: 1px solid black; */
-            box-shadow: 1px 2px 3px rgb(46, 46, 46);
-        }
-
-        @media (max-width: 768px) {
-            .gmap_canvas {
-                width: 80%;
-            }
-        }
-
-        @media (max-width: 480px) {
-            .gmap_canvas {
-                width: 90%;
-            }
-        }
-
-
-
-        /* 
-        ====== Footer ======
-        */
-        footer {
-            margin: -10px 0 0;
-            padding: 25px 0;
-
-            background: rgb(40, 40, 40);
-            text-align: center;
-            font-family: 'Open Sans';
-
-            color: white;
-            font-size: 16px;
-        }
-
-        footer a {
-            text-decoration: none;
-            color: rgb(113, 151, 255);
-        }
-
-        footer p {
-            margin: 12px 0;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/82972bccd0.js" crossorigin="anonymous"></script>
@@ -848,6 +252,7 @@
                 <li><a target="_blank" href="https://smktibaliglobalsingaraja.sch.id">SMK TI Bali Global Singaraja</a>
                 </li>
                 <li><a target="_blank" href="https://bulelengkab.go.id">Pemkab Buleleng</a></li>
+                <li><a target="_blank" href="https://github.com/aryadewata">Arya Dewata</a></li>
             </ul>
             <p>by SMKTI's Software Engineering Students</p>
         </footer>
